fix linked text styles for scrollbar

--- a/src/styles/links.module.styl
+++ b/src/styles/links.module.styl
@@ -2,6 +2,9 @@
 
 .wrapper
   width 100%
+  height 100%
+  display flex
+  flex-flow column
 
 .headingInfoContainer
   display flex
@@ -24,13 +27,17 @@
 
   p 
     max-width 36rem
+    margin 0
 
 .bottomModule
-  height 100%
+  // height 100%
   overflow-y auto
 
 .linkedIndex
   width max-content
+
+.linkedTextContainer
+  margin 2.4rem
 
 .bottomTextBar
   display flex
